tdf#100507 RTF import: don't set default para style to the 0th char style

Regression from commit 1be0a3fa9ebb22b607c54b47739d4467acfed259
(n#825305: writerfilter RTF import: override style properties like Word,
2014-06-17), the problem was that the RTF_PARD handler wanted to set a
default paragraph style, but it didn't check if the 0th style is
actually a paragraph one. This resulted in using a character style name
as a paragraph one, throwing in SwUnoCursorHelper::SetTextFormatColl()
-> all paragraph properties were lost, including the left indent.

Fix this by tracking the style type, and filtering out character styles
when looking up a default paragraph style.

Change-Id: I41faab0e72667b89ec9a507014b395a675847abf